--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 cvma-metadata.csv
+cvma-beacon-jsonld.txt
+cvma-beacon-rdf.txt
+cvma-beacon-ttl.txt
+cvma-beacon-cgif.txt
+cvma-dump-jsonld/*
+cvma-dump-rdf/*
+cvma-dump-ttl/*
+cvma-dump-cgif/*
 issues.md
