Mostly complete generic revision

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-cvma-metadata.csv
-cvma-beacon-json.txt
-cvma-beacon-rdf.txt
-cvma-beacon-ttl.txt
-cvma-beacon-cgif.txt
-cvma-listdump-json/*
-cvma-listdump-rdf/*
-cvma-listdump-ttl/*
-cvma-listdump-cgif/*
-cvma-dump-json/*
-cvma-dump-rdf/*
-cvma-dump-ttl/*
-cvma-dump-cgif/*
-issues.md
+__pycache__
