Get ready for release 0.9.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-# Standard packages
-argparse
-datetime
+# Non-PIP packages
 #glob
+#hashlib
 #json
-logging
 #os
 #shutil
 #time
 #urllib
 #zipfile
 
-# Non-standard packages
-#hashlib
+# PIP packages
+argparse
+datetime
 httpx >= 0.24.0
+logging
 lxml >= 5.0.0
 pyoxigraph >= 0.4.0
 rdflib >= 7.0.0
